# chad_vis

./: CMakeLists.txt
assets/misc/: vk_layer_settings.txt
assets/shaders/defaults/: default.frag  default.vert  gradient.comp  oversized_triangle.vert  tone_mapping.comp
assets/shaders/smaa/: settings.glsl
cmake/: _settings.cmake  cme.cmake  glfw.cmake  glm.cmake  options_compiler.cmake  options_global.cmake  options_linker.cmake  sdl.cmake  sfml.cmake  shaders.cmake  vma.cmake  vulkan.cmake
include/chad_vis/: engine.hpp  window.hpp
include/chad_vis/core/: device.hpp  engine.hpp  input.hpp  pipeline.hpp  renderer.hpp  swapchain.hpp  window.hpp
include/chad_vis/device/: buffer.hpp  device_buffer.hpp  image.hpp  pipeline.hpp  queues.hpp  selector.hpp
include/chad_vis/entities/: camera.hpp  scene.hpp
include/chad_vis/entities/extra/: grid.hpp  plymesh.hpp
include/chad_vis/entities/mesh/: indices.hpp  mesh.hpp  vertices.hpp
include/chad_vis/ext/: smaa.hpp
src/: main.cpp
src/buffers/: device.cppm  device_buffer.cppm  image.cpp  image.cppm  mesh.cppm
src/chad_vis/core/: device.cpp  engine.cppm  main.cpp  pch.hpp  pipeline.cpp  swapchain.cpp  window.cpp
src/chad_vis/device/: image.cpp  pipeline.cpp  queues.cpp  selector.cpp
src/chad_vis/entities/: scene.cpp
src/chad_vis/ext/: smaa.cpp
src/chad_vis_OLD/core/: pch.hpp  swapchain.cpp
src/chad_vis_OLD/device/: image.cpp
src/chad_vis_OLD/ext/: smaa.cpp
src/chad_vis_OLD/include/chad_vis/device/: device_buffer.hpp  image.hpp
src/chad_vis_OLD/include/chad_vis/entities/extra/: plymesh.hpp
src/chad_vis_OLD/include/chad_vis/entities/mesh/: indices.hpp  vertices.hpp
src/chad_vis_OLD/include/chad_vis/ext/: smaa.hpp
src/core/: device.cpp  device.cppm  engine.cpp  engine.cppm  input.cppm  main.cpp  pipeline.cppm  render_semaphore.cppm  renderer.cppm  swapchain.cppm  window.cpp  window.cppm
src/core/pipeline/: pipeline_compute.cppm
src/ext/: pch.hpp  smaa.cppm  vma.cpp  vma.cppm  vulkan.cpp
src/exts/: vulkan.cpp
src/renderer/: pipeline.cpp  pipeline.cppm  pipeline_graphics.cpp  renderer.cpp  renderer.cppm  semaphore.cppm  swapchain.cpp  swapchain.cppm
src/renderer/pipeline/: pipeline.cppm  pipeline_base.cpp  pipeline_base.cppm  pipeline_compute.cpp  pipeline_graphics.cpp  pipeline_graphics.cppm
src/res/: image.cppm
src/scene/: camera.cppm  grid.cppm  plymesh.cppm  scene.cpp  scene.cppm
